<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gunmetal"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:id="@+id/llUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tvGreeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/menu" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/avatar" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenuGreeting"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llUp" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenuQuestion"
        android:textColor="@color/gray"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@id/llCondition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting" />

    <LinearLayout
        android:id="@+id/llCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/llFirstBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestion">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/calm"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_menu_background"
                android:padding="10dp"
                app:srcCompat="@drawable/calm" />

            <TextView
                android:id="@+id/tvCalm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/calm"
                android:textColor="@color/gray"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/relaxed"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_menu_background"
                android:padding="10dp"
                app:srcCompat="@drawable/relaxed" />

            <TextView
                android:id="@+id/tvRelaxed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/relaxed"
                android:textColor="@color/gray"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/focused"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_menu_background"
                android:padding="10dp"
                app:srcCompat="@drawable/focused" />

            <TextView
                android:id="@+id/tvFocused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/focused"
                android:textColor="@color/gray"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/excited"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_menu_background"
                android:padding="10dp"
                app:srcCompat="@drawable/focused" />

            <TextView
                android:id="@+id/tvExcited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/excited"
                android:textColor="@color/gray"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFirstBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/main_menu_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/llSecondBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llCondition">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFirstHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/header"
                android:textColor="@color/gunmetal"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:text="@string/text"
                android:textColor="@color/gunmetal"
                android:textSize="12dp" />

            <android.widget.Button
                android:id="@+id/btnFirstMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/main_menu_btn_back"
                android:clickable="true"
                android:paddingHorizontal="30dp"
                android:text="@string/more"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@+id/question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instruction" />
        </LinearLayout>

        <ImageView
            android:id="@+id/FirstImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/main_menu_background"
            android:padding="10dp"
            app:srcCompat="@drawable/block_first" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSecondBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/main_menu_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/llDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llFirstBlock">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSecondHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/header"
                android:textColor="@color/gunmetal"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:text="@string/text"
                android:textColor="@color/gunmetal"
                android:textSize="12dp" />

            <android.widget.Button
                android:id="@+id/btnSecondMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/main_menu_btn_back"
                android:clickable="true"
                android:paddingHorizontal="30dp"
                android:text="@string/more"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@+id/question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instruction" />
        </LinearLayout>

        <ImageView
            android:id="@+id/SecondImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/main_menu_background"
            android:padding="10dp"
            app:srcCompat="@drawable/block_second" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSecondBlock">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/note" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/user" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>